CHANGES for Netcdf-Java library
Version @VERSION.MINOR@
Build Date = @BUILDTIME@

Changes in version 4.1:
 8:
  Grib: precipitation accumulation
  point datasets: CF-1.5, Suomi, FslWindProfiler, Cosmic, GempakSurface
  catch illegal bounds shapes in CoordAxis1D.makeBounds()
  UAMIV iosp not handling file seperator generally
  Handle missing values in CFPointObs, NestedTables.
  Allow missing_value processing of CHAR dataType. empty string = 0.
  StructurePseudo moved to ucar.nc2.dataset.StructurePseudoDS because we need missing values; ucar.nc2.StructurePseudo now deprecated
 7:
  H5iosp: deal with compressed, chunked compound types
  ucar.nc2.iosp.LayoutBB now a subclass of Layout
  ucar.nc2.dt.point.StandardSection implementation, add to PointFeatureDatasetViewer
  HdfEos: look for XDim/YDim coordinates with GCTP_GEO projection, these are lat/lon
  CPpointObs: clarify the variants.
  Variable.getNameAndDimensions() had bug when theres a '%' in the name.
  UAMIV iosp calls finish() not sync()
  NetcdfDataset.enhance() now returns the CoordSysBuilder for debugging purposes
  fix NetdfDatasetInfo.getParseInfo()
  improve HDF-EOS processing.
  add earth_radius parameter to AlbersEqualArea, LambertAzimuthEqualArea, LambertConformalConic
  refactor Earth, EarthEllipsoidal. Use inverse flattening as parameter, consolidate constructors, use proj4 calculations of ellipse parameters
  add ucar.unidata.geoloc.projection.proj4 for jhlab java versions of proj4 code; AlbersEqualAreaEllipse, LambertConformalConicEllipse.
 6:
  nasty bug in Index.scalarIndexImmutable
  redo NCdumpW.writeNcML to use Formatter
  fix sync() in all iosps we control
  ucar.nc2.ft.point.standard.Evaluator() uses equals() instead of ==
  add pointstream error handling; add NcStream.Error message
  aggExisting caching now works correctly
  cdmremote point: get DateRange filter working
  optionally add time resolution in server config
  CdmRemoteFeatureDataset gets bb, dateRange from capabilities doc