@@ -4,8 +4,9 @@ Build Date = @BUILDTIME@
 
 Changes in version 4.1:
  8:
+  DefaultCOnventions: allow multiple forced time coords
   Grib: precipitation accumulation
-  point datasets: CF-1.5, Suomi, FslWindProfiler, Cosmic, GempakSurface
+  point datasets: CF-1.5, Suomi, FslWindProfiler, Cosmic, GempakSurface, Madis, UnidataObs
   catch illegal bounds shapes in CoordAxis1D.makeBounds()
   UAMIV iosp not handling file seperator generally
   Handle missing values in CFPointObs, NestedTables.
